<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:background="@color/backgroundTheme"
            android:text="@string/formData" />
        
        <EditText
            android:id="@+id/namalengkap_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginTop="20dp"
            android:hint="@string/namaLengkap"
            tools:ignore="Autofill"/>

        <EditText
            android:id="@+id/umur_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="number"
            android:hint="@string/umur"
            tools:ignore="Autofill"/>

        <EditText
            android:id="@+id/beratbadan_editttext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="number"
            android:hint="@string/bBadan"
            tools:ignore="Autofill"/>

        <EditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            tools:ignore="Autofill"/>

        <EditText
            android:id="@+id/telepon_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="phone"
            android:hint="@string/noTelp"
            tools:ignore="Autofill"/>

        <EditText
            android:id="@+id/gejala_pasien"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="text"
            android:hint="Masukkan gejala-gejala yang anda alami"
            tools:ignore="Autofill"/>

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:background="@color/colorPrimary"
            android:text="@string/submit"/>

    </LinearLayout>

</ScrollView>